--- a/index.html
+++ b/index.html
@@ -477,6 +477,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-p">Subscribe</p>
+          <form class="form-subscribe">
+            <label class="label-form">
+              <input
+                class="input-subscribe"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="icon-button" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-open">
