--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@
     <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
-          <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black-18dp-2-1-1-1"></use>
+          <svg class="modal-close-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-p">Leave your contacts and we will call you back</p>
@@ -517,7 +517,7 @@
                 id="user-name"
               />
               <svg class="icon-label" width="18" height="24">
-                <use href="./images/icons.svg#icon-person"></use>
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
           </div>
@@ -526,7 +526,7 @@
             <div class="div-input">
               <input class="input" type="tel" name="user-tel" id="user-tel" />
               <svg class="icon-label" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone"></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
           </div>
@@ -540,7 +540,7 @@
                 id="user-email"
               />
               <svg class="icon-label" width="18" height="24">
-                <use href="./images/icons.svg#icon-email"></use>
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
